<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/images"
            android:layout_marginBottom="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:autofillHints="@string/email"
                android:hint="No. Telp"
                android:inputType="phone"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:autofillHints="No. KTA"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/tv_pass"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lupa Password?" />

        <Button
            android:id="@+id/tv_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginHorizontal="50dp"
            app:cornerRadius="20dp"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</RelativeLayout>